# debugtox

./: .clog.toml  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-test-deploy.yml  ci.yml  draft.yml  release.yml
.netlify/: state.json
cmake/: Installation.cmake
docker/: wasm  wasm.Dockerfile  wasm.Dockerfile.dockerignore
platform/: deps.depfile
platform/android/6.2.4/: AndroidManifest.xml
platform/android/qt-6.8.1/: AndroidManifest.xml
platform/flatpak/: chat.tox.DebugTox.json
platform/linux/: chat.tox.DebugTox.appdata.xml  chat.tox.DebugTox.desktop
platform/macos/: Info.plist  createdmg
platform/wasm/: netlify.sh  wasm  wasm.Dockerfile  wasm.Dockerfile.dockerignore
platform/windows/: debugtox.rc  debugtox64.nsi  generate-icon.sh
platform/windows/cross-compile/: dll-deps
src/: core.cpp  core.h  coreoptions.cpp  coreoptions.h  debugtox.cpp  debugtox.h  debugtox.ui  logger.cpp  logger.h  main.cpp
src/containers/: circularbuffer.h
src/models/: coreevent.cpp  coreevent.h
src/models/bytes/: bytearray.cpp  bytearray.h  publickey.cpp  publickey.h
src/models/enums/: conferencetype.cpp  conferencetype.h  conferencetype_p.h  connection.cpp  connection.h  connection_p.h  filecontrol.cpp  filecontrol.h  filecontrol_p.h  groupexittype.cpp  groupexittype.h  groupexittype_p.h  groupjoinfail.cpp  groupjoinfail.h  groupjoinfail_p.h  groupmodevent.cpp  groupmodevent.h  groupmodevent_p.h  groupprivacystate.cpp  groupprivacystate.h  groupprivacystate_p.h  grouptopiclock.cpp  grouptopiclock.h  grouptopiclock_p.h  groupvoicestate.cpp  groupvoicestate.h  groupvoicestate_p.h  messagetype.cpp  messagetype.h  messagetype_p.h  userstatus.cpp  userstatus.h  userstatus_p.h
src/models/events/: conferenceconnected.cpp  conferenceconnected.h  conferenceinvite.cpp  conferenceinvite.h  conferencemessage.cpp  conferencemessage.h  conferencepeerlistchanged.cpp  conferencepeerlistchanged.h  conferencepeername.cpp  conferencepeername.h  conferencetitle.cpp  conferencetitle.h  dhtgetnodesresponse.cpp  dhtgetnodesresponse.h  filechunkrequest.cpp  filechunkrequest.h  filerecv.cpp  filerecv.h  filerecvchunk.cpp  filerecvchunk.h  filerecvcontrol.cpp  filerecvcontrol.h  friendconnectionstatus.cpp  friendconnectionstatus.h  friendlosslesspacket.cpp  friendlosslesspacket.h  friendlossypacket.cpp  friendlossypacket.h  friendmessage.cpp  friendmessage.h  friendname.cpp  friendname.h  friendreadreceipt.cpp  friendreadreceipt.h  friendrequest.cpp  friendrequest.h  friendstatus.cpp  friendstatus.h  friendstatusmessage.cpp  friendstatusmessage.h  (+40 more)
src/views/: commandview.cpp  commandview.h  commandview.ui  logview.cpp  logview.h  logview.ui
test/: smoke-test.sh
tools/: update-versions.sh
